[package]
name = "kensa-port-forwarder"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = {version="4.5.17",features = ["derive"]}
dialoguer = "0.11.0"
directories = "5.0.1"
serde = {version = "1.0.209", features = ["derive"]}
serde_json = "1.0.128"
ssh-key = {version = "0.6.6", features = ["rsa"]}
tungstenite = {version = "0.24.0",features = ["native-tls"]}
url = "2.5.4"
uuid = {version = "1.10.0", features = ["v4"]}
